--- a/quiz.html
+++ b/quiz.html
@@ -53,6 +53,14 @@
       <div id="11" class="col-sm-2 btn btn-info btn-answer" onclick="checkAnswer(this.id); playSound('assets/sounds/b3.mp3');">B</div>
     </div>
     </div>
+	 <div class="row">
+    <div class="col-sm-6 quiz-answer">
+      <div id="11" class="col-sm-2 btn btn-info btn-answer" onclick="checkAnswer(this.id); playChord(0);">MC</div>
+	  <div id="11" class="col-sm-2 btn btn-info btn-answer" onclick="checkAnswer(this.id); playChord(1);">MD</div>
+	  <div id="11" class="col-sm-2 btn btn-info btn-answer" onclick="checkAnswer(this.id); playChord(7);">MG</div>
+	  
+    </div>
+    </div>
     <div id="correct">Correct!</div>
     <div id="incorrect">Incorrect!</div>
     <center><a href="quiz.html" id="next" class="btn btn-success">Next</a></center>
